fix white space on the right

--- a/css/main.css
+++ b/css/main.css
@@ -103,6 +103,10 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 h1 {
   font-size: 23px;
@@ -186,10 +190,10 @@ h1 {
   position: relative;
   left: 10px;
   top: 10px;
-  width: 100%;
   margin-top: 5%;
   margin-bottom: 5%;
   margin-left: 5%;
+  margin-right: 5%;
 }
 
 .flexbox {
